--- a/templates/marbles/marble_detail.html
+++ b/templates/marbles/marble_detail.html
@@ -12,7 +12,7 @@
    
   <div class="bg-white  sm:py-20">
     <div class="mx-auto max-w-4xl px-6 lg:px-8">
-  <img alt="ecommerce" class=" border-gray-200" src="{{single_marble.marble_photo.url}}"  width="900" height="25">
+ <!-- <img alt="ecommerce" class=" border-gray-200" src="{{single_marble.marble_photo.url}}"  width="900" height="25"> -->
   
   <div class="w3-center text-red">
     <span class="px-4">
