--- a/templates/marbles/marble_detail.html
+++ b/templates/marbles/marble_detail.html
@@ -141,7 +141,7 @@
     <div class="w3-hide-large w3-hide-medium py-4">
      <br>
       <span class="">
-       <img alt="ecommerce" class=" border-gray-200" src="{{single_marble.marble_photo.url}}" width="500" height="25">
+      <!-- <img alt="ecommerce" class=" border-gray-200" src="{{single_marble.marble_photo.url}}" width="500" height="25"> -->
       </span>
    </div>
 
