--- a/templates/marbles/marble_detail.html
+++ b/templates/marbles/marble_detail.html
@@ -13,7 +13,7 @@
   <div class="bg-white  sm:py-20">
     <div class="mx-auto max-w-4xl px-6 lg:px-8">
  <!-- <img alt="ecommerce" class=" border-gray-200" src="{{single_marble.marble_photo.url}}"  width="900" height="25"> -->
-  
+   <h5>Submit the form, and a representative will connect with you shortly</h5>
   <div class="w3-center text-red">
     <span class="px-4">
     {% include 'includes/messages.html' %}
